--- a/index.html
+++ b/index.html
@@ -1,9 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My GitHub Page</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Daniel Gao | Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px auto;
+      max-width: 800px;
+      line-height: 1.6;
+      padding: 0 20px;
+    }
+    h1, h2 {
+      color: #333;
+    }
+    .projects a {
+      color: #007acc;
+      text-decoration: none;
+    }
+    .projects a:hover {
+      text-decoration: underline;
+    }
+    .contact {
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello, GitHub Pages!</h1>
+
+  <h1>Daniel Gao</h1>
+  <p><em>Web Developer | Designer | Student</em></p>
+
+  <h2>About Me</h2>
+  <p>
+    I’m a web developer passionate about building clean and user-friendly websites. 
+    I love learning new technologies and solving real-world problems with code.
+  </p>
+
+  <h2>Projects</h2>
+  <ul class="projects">
+    <li><strong>Project One</strong> – <a href="https://github.com/yourusername/project1">GitHub Link</a></li>
+    <li><strong>Project Two</strong> – <a href="https://github.com/yourusername/project2">GitHub Link</a></li>
+  </ul>
+
+  <h2>Contact</h2>
+  <p class="contact">
+    📧 danielgao2766@gmail.com.com<br>
+    💼 <a href="https://www.linkedin.com/in/daniel-g-812a7b248/">LinkedIn</a><br>
+    💻 <a href="https://github.com/DanielGao2766">GitHub</a>
+  </p>
+
 </body>
 </html>
