--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
   <h1>Daniel Gao</h1>
-  <p><em>Web Developer | Designer | Student</em></p>
+  <p><em>Web Developer | Designer | Student | Computer Science Major @ University of Virginia</em></p>
 
   <h2>About Me</h2>
   <p>
@@ -40,13 +40,13 @@
 
   <h2>Projects</h2>
   <ul class="projects">
-    <li><strong>Project One</strong> – <a href="https://github.com/yourusername/project1">GitHub Link</a></li>
-    <li><strong>Project Two</strong> – <a href="https://github.com/yourusername/project2">GitHub Link</a></li>
+    <li><strong>Project: Web App w/ React.js</strong> – <a href="https://github.com/yourusername/project1">GitHub Link</a></li>
+    <li><strong>Project: Python Data Analysis</strong> – <a href="https://github.com/yourusername/project2">GitHub Link</a></li>
   </ul>
 
   <h2>Contact</h2>
   <p class="contact">
-    📧 danielgao2766@gmail.com.com<br>
+    📧 danielgao2766@gmail.com<br>
     💼 <a href="https://www.linkedin.com/in/daniel-g-812a7b248/">LinkedIn</a><br>
     💻 <a href="https://github.com/DanielGao2766">GitHub</a>
   </p>
