--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 <body>
 
   <h1>Daniel Gao</h1>
-  <p><em>Web Developer | Designer | Student | Computer Science Major @ University of Virginia</em></p>
+  <p><em>Web Developer | Designer | Computer Science Major @ University of Virginia</em></p>
 
   <h2>About Me</h2>
   <p>
-    I’m a web developer passionate about building clean and user-friendly websites. 
+    I’m a web developer passionate about building user-friendly websites using my UI/UX skills.
     I love learning new technologies and solving real-world problems with code.
   </p>
 
