--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 
   <h1>Daniel Gao</h1>
-  <p><em>Web Developer | Designer | Computer Science Major @ University of Virginia</em></p>
+  <p><em>Computer Science Major @ University of Virginia</em></p>
 
   <h2>About Me</h2>
   <p>
